objects/ssot__BenefitDisbursement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualCompletionDateTime__c</fullName>
        <label>Actual Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitAssignmentId__c</fullName>
        <label>Benefit Assignment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitDisbursementRecipientType__c</fullName>
        <label>Benefit Disbursement Recipient Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitSessionId__c</fullName>
        <label>Benefit Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisbursedQuantity__c</fullName>
        <label>Disbursed Quantity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DisbursementStatus__c</fullName>
        <label>Disbursement Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Disbursement Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramEnrollmentId__c</fullName>
        <label>Program Enrollment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientCount__c</fullName>
        <label>Recipient Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientId__c</fullName>
        <label>Recipient</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UnitOfMeasureId__c</fullName>
        <label>Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726629265_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitDisbursement_ProgramEnrollmen_rel</label>
        <referenceTo>ssot__ProgramEnrollment__dlm</referenceTo>
        <relationshipLabel>BenefitDisbursement_ProgramEnrollmen_rel</relationshipLabel>
        <relationshipName>rel_1716726629265_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726632780_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitDisbursement_BenefitSessionId_rel</label>
        <referenceTo>ssot__BenefitSession__dlm</referenceTo>
        <relationshipLabel>BenefitDisbursement_BenefitSessionId_rel</relationshipLabel>
        <relationshipName>rel_1716726632780_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726635115_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitDisbursement_BenefitAssignmen_rel</label>
        <referenceTo>ssot__BenefitAssignment__dlm</referenceTo>
        <relationshipLabel>BenefitDisbursement_BenefitAssignmen_rel</relationshipLabel>
        <relationshipName>rel_1716726635115_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>